# astrological_insight_generator

./: .env.example  .gitignore  DELIVERABLES.md  QUICKSTART.md  README.md  env.example  main.py  pyproject.toml  query.sh  run.py  setup.sh
app/: main.py
app/api/: dependencies.py  routes.py  schemas.py
app/config/: settings.py
app/core/llm/: client.py  prompt_builder.py
app/core/llm/providers/: __init__.py  base_provider.py  mock_provider.py  openai_provider.py
app/core/translation/: translator.py
app/core/vector_store/: __init__.py  vector_service.py
app/core/zodiac/: calculator.py  constants.py  traits.py
app/data/: astrological_corpus.json  prompt_templates.json  traits.json  zodiac_signs.json
app/services/: insight_service.py  validator_service.py
docs/: ARCHITECTURE.md  Machine Coding Assignment ML .txt  RAG_IMPLEMENTATION_SUMMARY.md  VECTOR_STORE_RAG.md  implementation_plan.md
